--- a/Cinegram/front/src/App.css
+++ b/Cinegram/front/src/App.css
@@ -135,11 +135,14 @@ p{
   text-align: left;
 }
 
-li{
-  border: 1px solid gray;
+.filmes li{
+  border: 2px solid gray;
   border-radius: 6px;
-  list-style-type: decimal;
+  list-style-type: none;
+  border-right: none;
+  border-left: none;
   color:white;
+  padding-left: 0;
 }
 
 .mensagemSalvo{
@@ -148,4 +151,42 @@ li{
 
 h3{
   color:white;
+}
+
+#plataforma{
+  border: none;
+  background-color: rgb(233, 227, 227);
+  color: black;
+  width: 100%;
+  height: 50px;
+  border-radius: 6px;
+}
+
+.filmes{
+  padding:0px;
+}
+
+.filmes li{
+  padding:10px;
+  margin-left:10px;
+  margin-right:10px;
+}
+
+h4{
+  color:white;
+  text-align:left;
+}
+
+.plataformas li {
+  display: inline-block;
+  width: 30%; 
+  margin-right: 3%; 
+  float: left; 
+  box-sizing: border-box; 
+}
+
+.plataformas:after {
+  content: "";
+  display: table;
+  clear: both;
 }
